--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "feedback",
+  "name": "bmo-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/server.js",
     "dev": "nodemon src/server.js"
@@ -10,8 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^0.21.12",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.4"    
+    "mysql2": "^2.2.5",
+    "nodemon": "^1.19.4",
+    "yup": "^0.29.3"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^2.0.2"
   }
 }
