--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,28 @@
 version: "3.3"
 services:
   api:
-    image: "node:14.15.0"
-    working_dir: /api
+    image: node:14.15.0
+    working_dir: /app
+    command: bash -c "yarn && yarn migrate && yarn dev"
+    depends_on:
+      - database
     volumes:
-      - ./api:/app
-    command: bash -c "yarn"
+      - "./api:/app"
+      - "./.env:/app/.env"
     ports:
       - "${API_PORT}:${API_PORT}"
   frontend:
-    image: "node:14.15.0"
+    image: node:14.15.0
     working_dir: /front
+    command: bash -c "yarn && yarn dev"
     volumes:
-      - ./frontend:/frontend
-    command: bash -c "yarn"
+      - "./frontend:/front"
     ports:
       - "${FRONT_PORT}:${FRONT_PORT}"
+  database:
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - 3306:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: "${DB_PASS}"
