--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "migrate": "knex --knexfile knexfile.cjs migrate:latest"
   },
   "author": "",
   "license": "ISC",
